# introcs-2021

./: .gitignore  README.md
Day-1/: Makefile  README.md  add.cpp  echo.cpp  main.cpp  make-func1.cpp  make-func2.cpp  make-main.cpp  make-main.cxx  program-0.1.0.cpp  program-0.2.0.cpp
Day-1/autotools/: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  zlib-read.cxx
Day-1/cmake/: CMakeLists.txt  README.md  zlib-read.cxx  zlib-write.cxx
Day-2/: Donkey.cpp  Donkey.h  Giraffe.h  Makefile  README.md  ThreeVector.cpp  ThreeVector.h  Tiger.h  Zoo.cpp  Zoo.h  bytelen_bitlen_types.cxx  enum_typedef.cpp  max_min_types.cxx  vector_main.cxx
Day-3/: Animal.cpp  Animal.h  CalculatorT.h  CalculatorT.tpp  File.cpp  File.h  Giraffe.cpp  Makefile  Particle.cpp  Particle.h  README.md  ThreeVector.cpp  ThreeVector.h  Tiger.cpp  calc_tmpl_main.cpp  dict_particle_mass.cpp  file_main.cxx  particle_table.cxx  unit.h  variable_arguments.cpp  zoo_main.cxx
day-1/: Makefile  debug.cpp  hello.cpp  make-func2.cpp  make-inc1.h  make-inc2.h  make-inc3.h  prototypesdef.h
day-1/autotools/: config.h.in  configure  zlib-write.cpp
day-1/cmake/: CMakeLists.txt  zlib-read.cpp
geant4+root/: .gitignore  MyMacro.C  README.md  ReadTree.C  WithTreeReader.C  run-macro.cxx
geant4+root/rootapp/: CMakeLists.txt  rootapp.cxx
geant4+root/simpleapp/: CMakeLists.txt  mysim.cxx
geant4+root/simpleapp/include/: DetectorConstruction.hh  PhysicsList.hh
geant4+root/simpleapp/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
geant4+root/visapp/: CMakeLists.txt  vissim.cxx
report/: PlotData.py  README.md
report/geant4/: CMakeLists.txt  introcs.cxx
report/geant4/geant4/include/: DetectorConstruction.h  RunAction.h  WaterPhantomHit.h  WaterPhantomSD.h
report/geant4/geant4/src/: DetectorConstruction.cpp  PrimaryGeneratorAction.cpp  WaterPhantomHit.cpp  WaterPhantomSD.cpp
report/geant4/include/: ActionInitialization.h  DetectorConstruction.h  EventAction.h  PrimaryGeneratorAction.h  WaterPhantomHit.h  WaterPhantomSD.h
report/geant4/src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  WaterPhantomSD.cpp
report/texdoc/: data.csv  report.aux  report.tex
