cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(rootapp)
find_package(Geant4 REQUIRED)
include(${Geant4_USE_FILE})
find_package(ROOT REQUIRED)
if(ROOT_FOUND)
  add_compile_definitions(HAVE_ROOT)
else(ROOT_FOUND)
  message(WARNING "No ROOT found in the system.")
endif(ROOT_FOUND)
include_directories(${PROJECT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIRS})
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
add_executable(rootapp.exe rootapp.cxx ${sources} ${headers})
# target_link_libraries(rootapp.exe ${Geant4_LIBRARIES} ${ROOT_LIBRARIES})
target_link_libraries(rootapp.exe ${Geant4_LIBRARIES} ROOT::Core)
