cmake_minimum_required(VERSION 3.8 FATAL_ERROR)
project(visapp)
find_package(Geant4 REQUIRED vis_opengl_x11)
include(${Geant4_USE_FILE})
include_directories(${PROJECT_SOURCE_DIR}/include)
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
add_executable(vissim.exe vissim.cxx ${sources} ${headers})
target_link_libraries(vissim.exe ${Geant4_LIBRARIES})
configure_file(${PROJECT_SOURCE_DIR}/vis.mac ${PROJECT_BINARY_DIR}/vis.mac COPYONLY)
